ui/src/snapshots/ui__test_harness__tests__renders_basic_layout.snap
---
source: ui/src/test_harness.rs
expression: rendered
---
────────────────────────────────────────
┌Chat──────────────────────────────────┐
│Messages                              │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
┌Composer──────────────────────────────┐
│hello world                           │
└──────────────────────────────────────┘
