ui/src/snapshots/ui__test_harness__tests__renders_draft_modal.snap
---
source: ui/src/test_harness.rs
expression: rendered
---
┌Chats─────────────────────────┐┌Messages (search: draft)──────────────────────┐
│General                       ││[  ] [09:12] Ada: Morning team                │
│Product (3)                   ││> [x ] [09:13] You: Morning, syncing on layout│
│Design (1)                    ││[ *] [09:15] Ada: Need the LLM draft soon     │
│           ┌LLM Draft─────────────────────────────────────────────┐           │
│           │Here is a draft response that needs review.           │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           └──────────────────────────────────────────────────────┘           │
└──────────────────────────────┘└──────────────────────────────────────────────┘
┌Composer──────────────────────────────────────────────────────────────────────┐
│drafting a reply                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
