ui/src/snapshots/ui__test_harness__tests__renders_layout_v1.snap
---
source: ui/src/test_harness.rs
expression: rendered
---
┌Chats─────────────────────────┐┌Messages (search: draft)──────────────────────┐
│General                       ││  [  ] [09:12] Ada: Morning team             ▲│
│Product (3)                   ││> [x ] [09:13] You: Morning, syncing on layou█│
│Design (1)                    ││  [ *] [09:15] Ada: Need the LLM draft soon  █│
│                              ││                                             █│
│                              ││                                             █│
│                              ││                                             █│
│                              ││                                             █│
│                              ││                                             █│
│                              ││                                             █│
│                              ││                                             █│
│                              ││                                             █│
│                              ││                                             █│
│                              ││                                             ║│
│                              ││                                             ▼│
│                              ││◄██████████████████████═════════════════════► │
└──────────────────────────────┘└──────────────────────────────────────────────┘
┌Composer──────────────────────────────────────────────────────────────────────┐
│drafting a reply                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
