ui/src/snapshots/ui__test_harness__tests__renders_log_window.snap
---
source: ui/src/test_harness.rs
expression: rendered
---
┌Chats─────────────────────────┐┌Messages (search: draft)──────────────────────┐
│Gen┌Logs──────────────────────────────────────────────────────────────────┐  ▲│
│Pro│2026-01-16T09:12:01+00:00 INFO app: booted                           ▲│ou█│
│Des│2026-01-16T09:12:02+00:00 WARN core: slow network                    █│  █│
│   │2026-01-16T09:12:03+00:00 INFO ui: render tick                       █│  █│
│   │2026-01-16T09:12:04+00:00 ERROR app: failed to sync                  █│  █│
│   │2026-01-16T09:12:05+00:00 INFO ui: redraw                            █│  █│
│   │                                                                     █│  █│
│   │                                                                     █│  █│
│   │                                                                     █│  █│
│   │                                                                     █│  █│
│   │                                                                     █│  █│
│   │                                                                     █│  ║│
│   │                                                                     ║│  ▼│
│◄██│                                                                     ║│═► │
└───│                                                                     ║│───┘
┌Com│                                                                     ▼│───┐
│dra│◄███████████████████████████████████████════════════════════════════► │   │
└───└──────────────────────────────────────────────────────────────────────┘───┘
 j/k  Scroll  |  Space  Select  |  /  Search  |  i  Composer  |  Ctrl+e  Export
